# porn-scraper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: dependabot.yml  docker-image.yml  on-main-pushed.yml  on-pr.yml  on-publish.yml  test.yml
app/: main.py  providers.py
app/api/: api.py
app/api/custom/: __init__.py  api_route.py
app/api/endpoints/: __init__.py  jav.py
app/scraper/: base.py  client.py
app/scraper/models/: __init__.py  content_result_xpath.py  scraped_result.py
app/scraper/scrapers/: javlibrary.py
app/scrapers/: __init__.py  guesser.py  regex.py  scrape.py  scrapers.py
app/scrapers/customs/: __init__.py  javlibrary.py
app/services/scraper/: regex.py  scraper.py  utils.py
openapi/: generate.py  openapi.json  openapi.yml
tasks/: generate-spec.py
test/: regex_test.py  scraper_regex_test.py
