[tool.poetry]
name = "porn-scraper"
version = "1.0.0"
description = ""
authors = ["mhaii <mhaii@pukenicorn.com>"]
readme = "README.md"
#packages = [{include = "app"}] # Not gonna build for dist

[tool.poetry.dependencies]
python = "^3.10"
javscraper = "^1.1.8"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
taskipy = "^1.10.4"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"


[tool.taskipy.tasks]
# poetry run task xxxxx
"generate:spec" = "python -m tasks.generate-spec"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
