[tool.poetry]
name = "porn-scraper"
version = "1.0.0"
description = ""
authors = ["mhaii <mhaii@pukenicorn.com>"]
readme = "README.md"
#packages = [{include = "app"}] # Not gonna build for dist

[tool.poetry.dependencies]
python = "^3.10"
javscraper = "^1.1.8"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
taskipy = "^1.12.2"
pyyaml = "^6.0"
cloudscraper = "^1.2.71"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.taskipy.tasks]
# poetry run task xxxxx
"generate:spec" = "python -m tasks.generate-spec"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
